--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "test": "vitest"
   },
   "keywords": [],
   "author": {
@@ -46,7 +47,8 @@
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.0.0",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "vitest": "^2.1.5"
   },
   "dependencies": {
     "@legendapp/state": "^2.0.2",
