--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/extension-task-item": "^2.3.0",
     "@tiptap/extension-task-list": "^2.3.0",
+    "@tiptap/extension-typography": "^2.11.5",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
